--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           </div>
           <div class="certificate-card">
             <p>Certificate 3</p>
-            <h3 class="certificate-title">Frontend Development</h3>
+            <h3 class="certificate-title"></h3>
             <p class="certificate-org"></p>
 
             <a
@@ -312,9 +312,20 @@
               class="certificate-link"
               >View Certificate</a
             >
-          </div>
+            </div>
           <div class="certificate-card">
             <p>Certificate 5</p>
+            <h3 class="certificate-title">Apertre 2.0</h3>
+            <p class="certificate-org">Issued by:Resourcio Community</p>
+            <a
+              href="https://i.ibb.co/ccv3q403/Aperture-2-0.jpg"
+              target="_blank"
+              class="certificate-link"
+              >View Certificate</a
+            >
+          </div>
+          <div class="certificate-card">
+            <p>Certificate 6</p>
             <h3 class="certificate-title">Hackatohn 1</h3>
             <p class="certificate-org">Issued by:JISCE</p>
             <a
@@ -644,10 +655,10 @@
               </a>
               <p class="project__description">
                 This game is actually a time pass game not only a man vs man it
-                is also played with computer. 💰
+                is also played with computer. 
               </p>
               <a
-                href="https://github.com/SufalBasak/Tic-Tac-Too"
+                href="https://tic-tac-too-1.netlify.app/"
                 class="project__link"
                 >View Project <i class="ri-arrow-right-line"></i
               ></a>
